--- a/style/style.css
+++ b/style/style.css
@@ -24,4 +24,38 @@ body {
   -webkit-transform: scale(1.02);
           transform: scale(1.02);
 }
+
+.main-menu {
+  margin: 1em;
+  -webkit-columns: 3 280px;
+          columns: 3 280px;
+  -webkit-column-gap: 1em;
+          column-gap: 1em;
+}
+
+.main-menu img {
+  display: block;
+  max-width: 100%;
+  height: 80%;
+  margin-bottom: 1em;
+  border-radius: 3px;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.main-menu img:hover {
+  -webkit-filter: brightness(30%);
+          filter: brightness(30%);
+}
+
+.main-menu div {
+  position: relative;
+  text-align: center;
+}
+
+.main-menu div p {
+  display: block;
+  color: #F9F1F2;
+  top: 50%;
+}
 /*# sourceMappingURL=style.css.map */
